Refactor: Translate comments, add docstrings, update icon handling and README

--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,8 @@ cython_debug/
 #Own Files
 
 secrets.py
+
+# Generated icon files and intermediate directories
+icons/
+scripts/icons/
+scripts/icons_png/
